--- a/css/csp.css
+++ b/css/csp.css
@@ -1,5 +1,17 @@
+body {
+  margin-top: 20px;
+  margin-right: 40px;
+  margin-bottom: 10px;
+  margin-left: 40px;
+}
+
 .title {
-  color: red;
+  color: rgb(227, 243, 56);
   text-align: center;
+  font-family: cursive;
   font-size: 40px;
+}
+
+h2 {
+  font-family: sans-serif;
 }
